# tuntun-in

./: .dockerignore  .gitignore  .mcp.json  .npmrc  AGENTS.md  LICENSE  README.md  biome.jsonc  bts.jsonc  docker-compose.yml  nx.json  opencode.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.cursor/: mcp.json
.github/workflows/: ci.yml  docker.yml
apps/agent/: .dockerignore  .env.example  Dockerfile  README.md  project.json  pyproject.toml  railway.json
apps/agent/src/: agent.py
apps/agent/src/onnx/: hey_tutu.onnx
apps/agent/src/tuntun_agent/: __init__.py  agent.py  convex.py  crowdsource.py  events.py  hazard_loop.py  logging_setup.py  navigator.py  overwatch.py  priority.py  reasoning.py  wakeword.py
apps/gowa/: Dockerfile  railway.json
apps/web/: .env.example  .env.production  Dockerfile  components.json  next.config.ts  package.json  railway.json  tsconfig.json
apps/web/public/favicon/: site.webmanifest
apps/web/src/: index.css
apps/web/src/app/: layout.tsx  manifest.ts  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/dashboard/: dashboard-view.tsx  layout.tsx  page.tsx
apps/web/src/app/(app)/dashboard/guardian/: guardian-view.tsx  page.tsx
apps/web/src/app/(app)/onboarding/: onboarding-view.tsx  page.tsx
apps/web/src/app/(app)/reflex/: page.tsx  reflex-call.tsx
apps/web/src/app/(marketing)/: layout.tsx  page.tsx
apps/web/src/app/(marketing)/login/: page.tsx
apps/web/src/app/(marketing)/register/: page.tsx
apps/web/src/app/ai/: page.tsx
apps/web/src/app/api/token/: route.ts
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/map/: hazard-map.tsx  map.css  page.tsx
apps/web/src/app/spectator/: page.tsx  spectator-view.tsx
apps/web/src/app/todos/: page.tsx
apps/web/src/components/: dashboard-sidebar.tsx  header.tsx  mode-toggle.tsx  page-loader.tsx  providers.tsx  sign-in-form.tsx  sign-up-form.tsx  user-menu.tsx
apps/web/src/components/ui/: map.tsx
apps/web/src/lib/: auth-server.ts
apps/web/src/modules/auth/: login-form.tsx  onboarding-form.tsx  register-form.tsx  social-auth.tsx
apps/web/src/modules/landing/: architecture.tsx  audience.tsx  content-section.tsx  cost-comparison.tsx  features.tsx  final-cta.tsx  hero.tsx  mascot.tsx  problem.tsx
(+6 files in other folders)
