[project]
name = "tuntun-agent"
version = "1.0.0"
description = "Tuntun.In AI mobility companion agent"
requires-python = ">=3.11,<3.15"
dependencies = [
    "livekit-agents[google]~=1.6",
    "deepagents>=0.6.12,<1.0.0",
    "langchain-google-genai>=4.2.6,<5.0.0",
    "convex>=0.7.0",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
