[project]
name = "tuntun-agent"
version = "1.0.0"
description = "Tuntun.In AI mobility companion agent"
requires-python = ">=3.11,<3.15"
dependencies = [
    "livekit-agents[codecs,google,images]~=1.6",
    "deepagents>=0.6.12,<1.0.0",
    "langchain-google-genai>=4.2.6,<5.0.0",
    "convex>=0.7.0",
    "python-dotenv",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Wake word gating ("Hey Tutu") — install with: uv sync --extra wakeword
# openwakeword hard-depends on tflite-runtime (cp311-only wheels), but we only
# use the ONNX backend, so a dependency override drops tflite-runtime. See
# [tool.uv.dependency-metadata] below.
wakeword = [
    "openwakeword>=0.6.0",
    "onnxruntime>=1.16",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

# Drop the tflite-runtime transitive dependency from openwakeword — it only
# ships cp311 wheels and we exclusively use the ONNX runtime backend.
[[tool.uv.dependency-metadata]]
name = "openwakeword"
version = "0.6.0"
requires-dist = [
    "onnxruntime",
    "scikit-learn",
    "scipy",
    "numpy",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
